# omny

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: __init__.py  conftest.py  corpus.py  download.py  measure.py  report_manchester.py  run_manchester.py
bench/backends/: __init__.py  endpoint_oxigraph.py  owlready2_mem.py  owlready2_sqlite.py  pyoxigraph_mem.py  pyoxigraph_rocksdb.py  rdflib_mem.py
bench/experiments/: lark_microbench.py
bench/horned-bench/: Cargo.toml
bench/horned-bench/src/: main.rs
bench/profiles/: parse_hp.prof  parse_hp_lark.prof  parse_hp_lark_pr47.prof  parse_hp_pr49.prof  render_hp_after_disjoint.prof  render_sio.prof
bench/reasoners/: __init__.py  elk.py  floors.py  hermit.py  jfact.py  konclude.py  none.py  owlrl.py  robot_docker.py
bench/results/2026-06-13-manchester/: performance-report.md  raw.csv
bench/runners/: __init__.py  __main__.py  compare_parsers.py  plots.py  rcelebi_compare.py  report.py  snapshot.py
bench/tests/: conftest.py  test_backends.py  test_corpus.py  test_download.py  test_measure.py  test_reasoners.py  test_snapshot.py  test_workloads.py
bench/workloads/: __init__.py  parse.py  parse_horned.py  parse_owlapi.py  parse_reason.py  query.py  render.py  render_horned.py  targets.py
docs/: FEATURES.md  HANDOFF-2026-06-03.md  RELEASING.md  perf-2026-05-29-pymos-bench.md  perf-2026-05-31-pymos-bench.md  perf-2026-06-01-expanded.md  perf-2026-06-01-fixes.md  perf-2026-06-01-pymos-bench.md  perf-2026-06-02-pymos-bench.md  perf-2026-06-02-session-summary.md
docs/superpowers/plans/: 2026-05-27-pymos-demo-notebooks.md  2026-05-27-pymos-plan1-expression-parser.md  2026-05-27-pymos.md  2026-05-28-anonymous-expression-targets.md  2026-05-28-interactive-mos-notebook.md  2026-05-28-pymos-perf-bench.md
docs/superpowers/specs/: 2026-05-27-pymos-demo-notebooks-design.md  2026-05-27-pymos-manchester-sparql-design.md  2026-05-28-anonymous-expression-targets-design.md  2026-05-28-interactive-mos-notebook-design.md  2026-05-28-pymos-perf-bench-design.md
examples/: Dockerfile  README.md  docker-compose.reasoners.yml  docker-compose.yml  jupytext.toml  omny_explorer.py
examples/data/: biomed.omn
examples/notebooks/: 01_parsing.ipynb  01_parsing.py  02_class_relations.ipynb  02_class_relations.py  03_remote_endpoint.ipynb  03_remote_endpoint.py  04_rendering.ipynb  04_rendering.py  05_interactive_mos.ipynb  05_interactive_mos.py  06_reasoning.ipynb  06_reasoning.py
examples/tests/: test_biomed.py
omny/: __init__.py  _frame_tokeniser.py  _lark_parser.py  _render_expression.py  entities.py  frames.py  jupyter.py  parser.py  pattern.py  render.py  sparql.py
pymos/: __init__.py  _frame_tokeniser.py  _jupyter_complete.py  _lark_parser.py  _render_expression.py  entities.py  frames.py  grammar.py  jupyter.py  parser.py  pattern.py  render.py  sparql.py  store.py  vocab.py
tests/: conftest.py  test_e2e.py  test_entities.py  test_explorer.py  test_frames.py  test_grammar.py  test_jupyter_magics.py  test_lark_equivalence.py  test_manchester_family.py  test_parser_corpus.py  test_parser_expressions.py  test_pattern.py  test_render.py  test_snomed_cases.py  test_sparql.py  test_store.py  test_sulo.py  test_vocab.py
tests/data/: pizza.omn  sulo-clinical-cases.owl
