[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omny"
version = "0.1.0"
description = "Pure-Python Manchester OWL Syntax parser and renderer for owlready2, with a class-relation SPARQL query builder. No Java required."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Michel Dumontier", email = "michel.dumontier@maastrichtuniversity.nl" }]
keywords = ["owl", "ontology", "manchester", "owl-syntax", "owlready2", "sparql", "rdf", "semantic-web"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
dependencies = ["lark>=1.0", "parsimonious>=0.10", "owlready2>=0.46"]

[project.urls]
Homepage = "https://github.com/MaastrichtU-IDS/omny"
Repository = "https://github.com/MaastrichtU-IDS/omny"
Issues = "https://github.com/MaastrichtU-IDS/omny/issues"

[project.optional-dependencies]
pyoxigraph = ["pyoxigraph>=0.4"]
rdflib = ["rdflib>=7.0"]
endpoint = ["SPARQLWrapper>=2.0"]
reasoning = ["owlrl>=6.0"]
dev = ["pytest>=8.0", "pyoxigraph>=0.4", "rdflib>=7.0", "ruff>=0.6", "lark>=1.0", "ipython>=8.0"]
bench = [
  "psutil>=5.9",
  "matplotlib>=3.8",
  "owlrl>=6.0",
  "rdflib>=7.0",
  "pyoxigraph>=0.4",
  "requests>=2.31",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["omny*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["omny/grammar.py"]
